ARROW-7841: [C++] Use ${HADOOP_HOME}/lib/native/ to find libhdfs.so again

This is a regression bug of e12d2851fe60a3628d900f432950dc321db65ff9 .

Closes #6424 from kou/cpp-hdfs-fix-path and squashes the following commits:

6d5f651e3 <Sutou Kouhei> ARROW-7841:  Use ${HADOOP_HOME}/lib/native/ to find libhdfs.so again

Authored-by: Sutou Kouhei <kou@clear-code.com>
Signed-off-by: Wes McKinney <wesm+git@apache.org>